// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Headers > crossSerialize > scoped > supports Headers 1`] = `"($R=>$R[0]=new Headers($R[1]=[$R[2]=["content-encoding","gzip"],$R[3]=["content-type","text/plain"]]))($R["example"])"`;

exports[`Headers > crossSerialize > supports Headers 1`] = `"$R[0]=new Headers($R[1]=[$R[2]=["content-encoding","gzip"],$R[3]=["content-type","text/plain"]])"`;

exports[`Headers > crossSerializeAsync > scoped > supports Headers 1`] = `"($R=>$R[0]=Promise.resolve($R[1]=new Headers($R[2]=[$R[3]=["content-encoding","gzip"],$R[4]=["content-type","text/plain"]])))($R["example"])"`;

exports[`Headers > crossSerializeAsync > supports Headers 1`] = `"$R[0]=Promise.resolve($R[1]=new Headers($R[2]=[$R[3]=["content-encoding","gzip"],$R[4]=["content-type","text/plain"]]))"`;

exports[`Headers > crossSerializeStream > scoped > supports Headers 1`] = `
"($R=>$R[0]=($R[1]=($R[2]=() => {
  const resolver = {
    p: 0,
    s: 0,
    f: 0
  };
  resolver.p = new Promise((resolve, reject) => {
    resolver.s = resolve;
    resolver.f = reject;
  });
  return resolver;
})()).p)($R["example"])"
`;

exports[`Headers > crossSerializeStream > scoped > supports Headers 2`] = `
"($R=>($R[7]=(resolver, data) => {
  resolver.s(data);
  resolver.p.s = 1;
  resolver.p.v = data;
})($R[1],$R[3]=new Headers($R[4]=[$R[5]=["content-encoding","gzip"],$R[6]=["content-type","text/plain"]])))($R["example"])"
`;

exports[`Headers > crossSerializeStream > supports Headers 1`] = `
"$R[0]=($R[1]=($R[2]=() => {
  const resolver = {
    p: 0,
    s: 0,
    f: 0
  };
  resolver.p = new Promise((resolve, reject) => {
    resolver.s = resolve;
    resolver.f = reject;
  });
  return resolver;
})()).p"
`;

exports[`Headers > crossSerializeStream > supports Headers 2`] = `
"($R[7]=(resolver, data) => {
  resolver.s(data);
  resolver.p.s = 1;
  resolver.p.v = data;
})($R[1],$R[3]=new Headers($R[4]=[$R[5]=["content-encoding","gzip"],$R[6]=["content-type","text/plain"]]))"
`;

exports[`Headers > serialize > supports Headers 1`] = `"new Headers([["content-encoding","gzip"],["content-type","text/plain"]])"`;

exports[`Headers > serializeAsync > supports Headers 1`] = `"Promise.resolve(new Headers([["content-encoding","gzip"],["content-type","text/plain"]]))"`;

exports[`Headers > toCrossJSON > supports Headers 1`] = `"{"t":25,"i":0,"s":{"value":{"t":9,"i":1,"a":[{"t":9,"i":2,"a":[{"t":1,"s":"content-encoding"},{"t":1,"s":"gzip"}],"o":0},{"t":9,"i":3,"a":[{"t":1,"s":"content-type"},{"t":1,"s":"text/plain"}],"o":0}],"o":0}},"c":"seroval-plugins/web/Headers"}"`;

exports[`Headers > toCrossJSONAsync > supports Headers 1`] = `"{"t":12,"i":0,"s":1,"f":{"t":25,"i":1,"s":{"value":{"t":9,"i":2,"a":[{"t":9,"i":3,"a":[{"t":1,"s":"content-encoding"},{"t":1,"s":"gzip"}],"o":0},{"t":9,"i":4,"a":[{"t":1,"s":"content-type"},{"t":1,"s":"text/plain"}],"o":0}],"o":0}},"c":"seroval-plugins/web/Headers"}}"`;

exports[`Headers > toCrossJSONStream > supports Headers 1`] = `"{"t":22,"i":0,"s":1,"f":{"t":26,"i":2,"s":1}}"`;

exports[`Headers > toCrossJSONStream > supports Headers 2`] = `"{"t":23,"i":1,"a":[{"t":26,"i":7,"s":2},{"t":25,"i":3,"s":{"value":{"t":9,"i":4,"a":[{"t":9,"i":5,"a":[{"t":1,"s":"content-encoding"},{"t":1,"s":"gzip"}],"o":0},{"t":9,"i":6,"a":[{"t":1,"s":"content-type"},{"t":1,"s":"text/plain"}],"o":0}],"o":0}},"c":"seroval-plugins/web/Headers"}]}"`;

exports[`Headers > toJSON > supports Headers 1`] = `"{"t":{"t":25,"i":0,"s":{"value":{"t":9,"i":1,"a":[{"t":9,"i":2,"a":[{"t":1,"s":"content-encoding"},{"t":1,"s":"gzip"}],"o":0},{"t":9,"i":3,"a":[{"t":1,"s":"content-type"},{"t":1,"s":"text/plain"}],"o":0}],"o":0}},"c":"seroval-plugins/web/Headers"},"f":63,"m":[]}"`;

exports[`Headers > toJSONAsync > supports Headers 1`] = `"{"t":{"t":12,"i":0,"s":1,"f":{"t":25,"i":1,"s":{"value":{"t":9,"i":2,"a":[{"t":9,"i":3,"a":[{"t":1,"s":"content-encoding"},{"t":1,"s":"gzip"}],"o":0},{"t":9,"i":4,"a":[{"t":1,"s":"content-type"},{"t":1,"s":"text/plain"}],"o":0}],"o":0}},"c":"seroval-plugins/web/Headers"}},"f":63,"m":[]}"`;
